--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="/pages/socio.html" class="nav-link">Socio</a>
         </nav>
     </header>
-    <h2 class="info">Informacion</h2>
+    <h2 class="palabra">Información</h2>
     <div class="santa">
         <img src="imagenes/santapng.png" alt="" width="200">
     </div>
@@ -32,8 +32,7 @@
         El Club y Biblioteca Ramón Santamarina, también conocido como Club Santamarina, es una institución deportiva de
         la ciudad de Tandil, situada en el interior de la provincia de Buenos Aires. Fue fundado el 20 de diciembre de
         1913 bajo el nombre de Club Atlético Independencia. Un mes después, tras una importante donación de la familia
-        Santamarina (integrante de la cúpula política de la ciudad), cambió su nombre por el actual. Participa en la
-        Primera Nacional, segunda categoría del fútbol argentino.
+        Santamarina (integrante de la cúpula política de la ciudad), cambió su nombre por el actual. Actualmente está por participar del torneo Federal A del fútbol argentino.
     </p>
 
     <div class="redes-container">
