--- a/pages/estadio.html
+++ b/pages/estadio.html
@@ -26,7 +26,7 @@
     <div class="imgestadio">
  <img src="/imagenes/estadiosan.jpg" alt="">
     </div>
-    <p class="textoestadio">El estadio donde juega Santamarina es el "Estadio Municipal General San Martin" , un estadio con capacidad para 8 760 personas. Ubicado en Avenida Rivadavia al 350, tambien es la sede de la liga tandilense de futbol. </p>
+    <p class="textoestadio">El estadio donde juega Santamarina es el "Estadio Municipal General San Martin" , un estadio con capacidad para 8,760 personas. Ubicado en Avenida Rivadavia al 350, tambien es la sede de la liga tandilense de fútbol. </p>
     
     <div class="maps-estadio">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d25379.300280853644!2d-59.14398200000001!3d-37.332741!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3497e3c70e3c613e!2sEstadio%20Gral.%20San%20Mart%C3%ADn!5e0!3m2!1ses-419!2sar!4v1666244039723!5m2!1ses-419!2sar" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
