--- a/pages/socio.html
+++ b/pages/socio.html
@@ -23,9 +23,38 @@
  </nav>
  </header> 
     <div class="partidos">
-        <h2>Hacete Socio</h2>
+        <h2 class="partidos-sub">Hacete Socio</h2>
+        <h3 class="pregunta-socio">¿Que beneficios tiene ser socio?</h3>
+        <p class="texto-respuno">Siendo socio tenes 2 entradas populares por partido gratis, o 2 plateas por 1000$. Ademas tenes un 10% de descuento en la tienda.</p>
+        <h3 class="pregunta-socio">¿Cuanto sale hacerme socio?</h3>
+        <p class="texto-respdos">Ser socio tiene un valor de 800$ por mes.</p>
      </div>
+     <form class="formulario-socio">
+     
+        <label for="nombre">Nombre:</label>
+        <input type="text" placeholder="Escribe tu nombre"> <br>
+        <label for="apellido">Apellido:</label>
+        <input type="text" placeholder="Escribe tu apellido"> <br>
+        <label for="dni">Dni:</label>
+        <input type="number" placeholder="Escribe tu dni"> <br>
+        <label for="fecha de nacimiento">Fecha de nacimiento:</label>
+        <input type="date"> <br>
+        <label for="domicilio">Domicilio :</label> 
+        <input type="text" placeholder="Escribe tu domicilio"> <br>
+        <label for="ciudad">Ciudad :</label>
+        <input type="text" placeholder="Escribe tu ciudad"> <br>
+        <label for="celular">Celular</label>
+        <input type="number" placeholder="Ingresa tu numero"> <br>
+        <label for="email">Email:</label>
+        <input type="email"> <br>
+        <input type="submit" value="Enviar">
+        
 
+
+
+
+
+     </form>
      <div class="redes-container">
         <ul>
           <li><a href="https://www.facebook.com/ClubSantamarinaTandil/" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
