--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -23,7 +23,7 @@
  </nav>
  </header> 
     <h2 class="info">Tienda</h2>
-    <p class="info">La "Tienda de Ramon" , esta ubicada en Yrigoyen 646, allí podrás hacerte socio, adquirir entradas para los próximos partidos o porque no, comprar ropa del aurinegro.</p>
+    <p class="info">La "Tienda de Ramon" , esta ubicada en Yrigoyen 646, podrás hacerte socio, adquirir entradas para los próximos partidos o porque no, comprar ropa del aurinegro.</p>
  
    <div class="tienda">
     <img class=camiseta src="/imagenes/casacasanta.jpeg" alt="">
